# sphinx-gettext-ifconfig

./: CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml
sphinx_gettext_ifconfig/: __init__.py  main.py
